skeleton/kubernetes_files/k8_serv_js.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8-serv-js-deployment
  namespace: default
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: k8-serv-js-pod
  template:
    metadata:
      labels:
        app: k8-serv-js-pod
    spec:
      containers: 
      - image: "gcr.io/xst-dev-001/k8_serv_js:v0.0.01"
      #- image: "poxstone/k8_serv_js:v0.0.01"
        name: k8-serv-js-container
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
