skeleton/kubernetes_files/k8_cloudsql_external_endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: k8-cloudsql-external-service
  namespace: default
subsets:
- addresses:
  - ip: 35.237...
  ports:
  - port: 3306
