skeleton/kubernetes_files/k8_cloudsql_external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-cloudsql-external-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  #type: ExternalName
  #externalName: mydnsservicename.com
