skeleton/kubernetes_files/k8_letsencrypt_res_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-letsencrypt-res-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  #type: NodePort
  type: LoadBalancer
  selector:
    app: k8-letsencrypt-res-pod
