skeleton/kubernetes_files/k8_redis_external_endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: k8-redis-external-service
  namespace: default
subsets:
- addresses:
  - ip: 10.0.0.3
  ports:
  - port: 6379
