skeleton/kubernetes_files/k8_redis_external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-redis-external-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  #type: ExternalName
  #externalName: mydnsservicename.com
