skeleton/kubernetes_files/k8_serv_js_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-serv-js-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  type: NodePort
  #type: LoadBalancer
  selector:
    app: k8-serv-js-pod
