skeleton/kubernetes_files/k8_app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8-app-ingress
  #annotations:
  #  kubernetes.io/ingress.global-static-ip-name: my-name-address

spec:
  #tls:
  #- hosts:
  #  - dev.eforcers.com.co
  #  secretName: k8-app-ssl-secrets
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          serviceName: k8-app-py-service
          servicePort: 8080
      
      - path: "/*"
        backend:
          serviceName: k8-app-py-service
          servicePort: 8080
      
      - path: "/sql/*"
        backend:
          serviceName: k8-serv-js-service
          servicePort: 8080
      
      - path: "/redis/*"
        backend:
          serviceName: k8-serv-js-service
          servicePort: 8080

      - path: "/.well-known/*"
        backend:
          serviceName: k8-letsencrypt-res-service
          servicePort: 8080
